# algoritmos-combinatorios-tarea-2

./: README.md  ejercicio_16_salida.txt  pyproject.toml
src/algoritmos_combinatorios_tarea_2/: __init__.py  ejercicio_12.py  ejercicio_13.py  ejercicio_14.py  ejercicio_15.py  ejercicio_16.py  ejercicio_2.py  main.py
tests/: test_ejercicio_12.py  test_ejercicio_13.py  test_ejercicio_2.py  test_main.py
